# love-all

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: insights.yml  live.yml
docs/: index.html
docs/css/: style.css
docs/js/: app.js  bracket.js  db.js  matchup.js  winprob.js
experiments/career_splits/: README.md  run.py
experiments/chess_point_analysis/: CROSSOVER_IDEAS.md  README.md  parser.py  quality.py  run.py  validate_parser.py  winprob.py
experiments/class_aware_eval/: README.md  compare.py  model.py  run.py
experiments/class_relative_wpa/: README.md  run.py
experiments/match_winprob/: README.md  matchdata.py  run.py  winprob_match.py
experiments/player_styles/: README.md  cluster.py  fingerprint.py  run.py
experiments/score_aware_eval/: README.md  compare.py  model.py  run.py
experiments/shot_language/: README.md  ngram.py  run.py  tokens.py
experiments/shot_patterns/: README.md  run.py
reports/: career_splits.md  chess_point_quality.md  class_relative_wpa.csv  class_relative_wpa.md  coverage_summary.md  data_quality.md  match_winprob.md  player_style_clusters.csv  player_styles.md  shot_language.md  shot_patterns.md
src/match_charting_project/: __init__.py  __main__.py  cli.py  paths.py  winprob_match.py
src/match_charting_project/analysis/: __init__.py  career_eras.py  coverage.py  tiers.py
src/match_charting_project/ingest/: __init__.py  build.py  download.py  manifest.py  sources.py  validate.py
tests/: test_career_eras.py  test_live.py  test_notation.py  test_winprob.py  test_winprob_match.py
(+14 files in other folders)
