[project]
name = "match-charting-project"
version = "0.1.0"
description = "Ingest, analyze, and visualize the Tennis Match Charting Project shot-by-shot dataset"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anthony" }]
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=16",
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.optional-dependencies]
analysis = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
]

[project.scripts]
match-charting-project = "match_charting_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/match_charting_project"]
